# pglet-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app-test.py  appveyor.yml  build-wheels.py  button.py  pglet.py  pyproject.toml  requirements.txt  setup.py
examples/: README.md  autoscroll.py  barchart.py  chat-ref.py  chat.py  ci.py  combobox.py  counter.py  dropdown-flutter.py  greeter.py  grid.py  hello-app.py  hello.py  min-page.py  minimal-page.py  nav.py  panel.py  persona.py  searchbox.py  split.py  stack.py  text.py  todo.py
pglet/: __init__.py  __main__.py  alignment.py  barchart.py  button.py  callout.py  checkbox.py  choicegroup.py  combobox.py  connection.py  connection2.py  constants.py  control.py  control_event.py  datepicker.py  dialog.py  diff.py  dropdown.py  event.py  form.py  grid.py  html.py  icon.py  iframe.py  image.py  linechart.py  link.py  message.py  nav.py  page.py  panel.py  persona.py  pglet.py  piechart.py  progress.py  protocol.py  reconnecting_websocket.py  searchbox.py  slider.py  spinbutton.py  (+10 more)
tests/: app_all_controls.py  app_barchart.py  app_clean.py  app_click.py  app_counter.py  app_datepicker.py  app_error.py  app_events.py  app_greeter.py  app_grid.py  app_grid_edit.py  app_html.py  app_icon.py  app_icon_browser.py  app_iframe.py  app_image.py  app_linechart.py  app_messages.py  app_multi.py  app_nav_control.py  app_page.py  app_page_tabs.py  app_perf.py  app_perf2.py  app_piechart.py  app_progress.py  app_resize.py  app_searchbox_control.py  app_signin.py  app_signin_from_code.py  app_slider.py  (+66 more)
